--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "mongodb": "^4.9.0",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
