--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.9.0",
     "next": "12.2.5",
     "nodemailer": "^6.7.8",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "18.7.13",
     "@types/nodemailer": "^6.4.5",
     "@types/react": "18.0.17",
