--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.9.0",
     "next": "12.2.5",
+    "next-swagger-doc": "^0.3.6",
     "nodemailer": "^6.7.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swagger-ui-react": "^4.14.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
