--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/nodemailer": "^6.4.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/swagger-ui-react": "^4.11.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "swagger-ui-react": "^4.14.0",
